Quick z-index issue with the go-to-top and side-nav elements

--- a/learn/style/homepage-style.css
+++ b/learn/style/homepage-style.css
@@ -69,7 +69,7 @@ b, strong{
   height: 100%;
   width: 0;
   position: fixed;
-  z-index: 11;
+  z-index: 100;
   top: 0;
   left: 0;
   background-color: var(--dark-black);
